--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
       <blockquote>I only want to live in peace, plant potatoes and dream!</blockquote>
     </main>
 
-    <section>
-      <h2>A semantic moomin form</h2>
+    <section class="moomin-form">
+      <div class="moomin-form-container">
+      <h2 class="moomin-form-title">A semantic moomin form</h2>
 
       <form>
         <fieldset>
@@ -87,6 +88,7 @@
           <input type="submit" value="Submit">
         </fieldset>
       </form>
+    </div>
 
       <figure>
         <img src="./images/moomin-writing.jpg" alt="moomin writing"/>
@@ -96,9 +98,8 @@
 
     <footer>
       <p>In Moominvalley, there are no such things as footers. If there were, the footer of Moominvalley would probably be the moomin's house, right at the southern tip, and therefore the bottom.</p>
-
-      <address>Contact Moominmamma for more info:
-        <br>
+      <p>Contact:</p>
+      <address>
         Moominmamma,
         <br>
         The Moomin House,
@@ -106,8 +107,8 @@
         Moominvalley
         <br>
         <br>
-        They don't have a phone so best to drop by, all visitors welcome.
       </address>
+      <p>(They don't have a phone so best to drop by, all visitors welcome.)</p>
     </footer>
   </body>
 </html>
